# chance-sprite

./: LICENSE  README.md  pyproject.toml
src/chance_sprite/: __init__.py  __main__.py  command_loader.py  discord_sprite.py  file_sprite.py  fungen.py  rolld6_commands.py  roller.py  sprite_context.py  sprite_utils.py
src/chance_sprite/common/: common.py  commonui.py
src/chance_sprite/common/menus/: generic_edge_menu.py
src/chance_sprite/common/modals/: confirm_modal.py  dice_input_modal.py
src/chance_sprite/common/result_types/: additive_result.py  hits_result.py  (+4 more)
src/chance_sprite/emojis/: __init__.py  emoji_manager.py
src/chance_sprite/message_cache/: __init__.py  message_codec.py  message_record.py  roll_record.py  roll_record_base.py  webhook_handle.py
src/chance_sprite/result_types/: __init__.py  additive_result.py  break_limit_result.py  close_call_result.py  hits_result.py  push_limit_result.py  second_chance_result.py
src/chance_sprite/roll_types/: __init__.py  alchemycreate.py  basic.py  bind.py  common.py  extended.py  magic.py  opposed.py  other.py  simple.py  spell.py  startingcash.py  summon.py  threshold.py
src/chance_sprite/rollui/: autocomplete.py  base_menu_view.py  base_roll_view.py  commonui.py  confirm_modal.py  dice_input_modal.py  edge_menu_persist.py  generic_edge_menu.py  modal_inputs.py  modals.py  my_button.py  roll_accessor.py  roll_view_persist.py
src/chance_sprite/ui/: commonui.py  confirm_modal.py  dice_input_modal.py  edge_menu_persist.py  generic_edge_menu.py
tests/: test_smoke_generated.py  test_smoke_import.py  test_smoke_rolls.py
(+1 files in other folders)
